[package]
name = "lt"
version = "0.1.0"
authors = ["David Rivas <jdr@rivas-yee.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
metaflac = "0.2"
linefeed = "0.6"
clap = "2.33"
structopt = "0.3"
chrono = "0.4"
prettytable-rs = "0.8"
git-version = "0.3"
num-format  = "0.4"
