[package]
name = "lt"
version = "0.1.0"
authors = ["David Rivas <jdr@rivas-yee.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies]
lt-macro = {path = "../lt-macro" }
metaflac = "0.2"
linefeed = "0.6"
clap = "2.33"
structopt = "0.3"
chrono = "0.4"
prettytable-rs = "0.8"
git-version = "0.3"
num-format  = "0.4"
id3 = "0.5"
hound = "3.4"
mp3-metadata = "0.3"
# mp4parse = "0.11"
mp4parse = { git = "https://github.com/mozilla/mp4parse-rust" }
puremp3 = "0.1"
byteorder = "1.3"
nom = "5.1"
bytes = "0.5"
lazy_static = "1.4"
num-derive = "0.3"
num-traits = "0.2"
